# faster-gaussian-splatting

./: .gitignore  Model.py  README.md  Renderer.py  Trainer.py  fastergs_garden.yaml  pyproject.toml
FasterGSCudaBackend/: __init__.py  pyproject.toml  setup.py
FasterGSCudaBackend/FasterGSCudaBackend/: __init__.py
FasterGSCudaBackend/FasterGSCudaBackend/rasterization/include/: buffer_utils.h  kernels_forward.cuh  kernels_pruning_scores.cuh  pruning_scores.h  rasterization_api.h
FasterGSCudaBackend/FasterGSCudaBackend/rasterization/src/: pruning_scores.cu  rasterization_api.cu
FasterGSCudaBackend/FasterGSCudaBackend/torch_bindings/: __init__.py  bindings.cpp  rasterization.py
